--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,15 @@
     <artifactId>java-jwt</artifactId>
     <version>4.3.0</version>
   </dependency>
+  <dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-core</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.flywaydb</groupId>
+    <artifactId>flyway-database-postgresql</artifactId>
+    <version>10.20.1</version>
+</dependency>
 	</dependencies>
 
 	<build>
